Fixing Navbar on mobile mode.

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,7 +6,7 @@
 
 @layer components {
     .submenu {
-      @apply bg-blue-200 w-full shadow-md text-center py-1 hover:bg-blue-400 duration-300 transition-all
+      @apply bg-blue-200 w-full h-fit shadow-md text-center py-1 hover:bg-blue-400 duration-300 transition-all
       ease-linear md:hidden
     }
     .logo {
